--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                  contando siempre con tecnología de avanzada, personal capacitado y motivado con el fin de cumplir y 
                  sobrepasar las expectativas de nuestros clientes.
             </p>
-            <a href="" class="btn-1">Contactanos</a>
+            <a href="#contact" class="btn-1">Contactanos</a>
         </div>
     </header>
 
@@ -68,11 +68,12 @@
                     <img src="/images/alarmas1.servicios.png" alt="">
                     <h3>Sistemas de Alarmas</h3>
                     <p>
-                        Ofrecemos servicio de instalación y mantenimiento de sistemas de alarmas alámbricos e inalámbricos, 
+                        Implementamos la instalación y mantenimiento de sistemas de alarmas alámbricos e inalámbricos, 
                         que permiten detectar a tiempo intrusiones en el perímetro de su hogar u oficina, 
                         enviando una notificación a la Central de Monitoreo y Supervisión de Seguridad para que intervenga rápidamente.
                     </p>
                 </div>
+
                 <div class="services-1">
                     <img src="/images/acceso1.servicios.png" alt="">
                     <h3>Controles de Acceso</h3>
@@ -82,7 +83,38 @@
                     </p>
                 </div>
             </div>
-            <a href="#" class="btn-1">Contactanos</a>
+
+
+            <div class="services-group">
+                <div class="services-1">
+                    <img src="/images/s.electricidad.png" alt="">
+                    <h3>Instalaciones Eléctricas</h3>
+                    <p>
+                        Ofrecemos servicio de instalación, mantenimiento, repación, actualización y asesoramiento,
+                        de sistemas eléctricos, tales como iluminación, cableado electrico domiciliario y empresaria, 
+                        trabajamos en redes electicas tanto de 110v y 220v.
+                    </p>
+                </div>
+                <div class="services-1">
+                    <img src="/images/alarma.incendios.png" alt="">
+                    <h3>Alarmas contra incendios</h3>
+                    <p>
+                        Ponemos a disposicíon el servicio de instalación, diseño, mantenimiento y venta de sistemas 
+                        de detección y extinción de incendios para empresas, edificios, residencias a nivel nacional. 
+                        El objetivo es proteger a las personas y su patrimonio con productos de calidad.
+                    </p>
+                </div>
+
+                <div class="services-1">
+                    <img src="/images/mantenimiento.pc.png" alt="">
+                    <h3>Servicio TÉcnico de PCs</h3>
+                    <p>
+                        Brindamos el mejor apoyo y damos solución a cualquier problema de tus equipos informáticos,
+                        como repación de laptops, computadoras, mantenimeinto de PCs, arreglo de impresoras y mucho mas.
+                    </p>
+                </div>
+            </div>
+            <a href="#contact" class="btn-1">Contactanos</a>
         </div>
     </section>
 
@@ -127,7 +159,7 @@
     </section>
     
     <div id="button-up">
-        <img src="images/flecha.png" class="button-up image">
+        <img src="images/flecha.png" width="50">
     </div>
    
     <footer class="footer">
