--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SYSTEM-CAM</title>
-    <link rel="icon" href="/images/logo.system-cam.png" type="image/png">
+    <link rel="icon" href="/images1/logo.system-cam.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     
     <header class="header" id="header">
         <div class="menu container">
-            <img src="/images/logo.system-cam.png" class="header-image">
+            <img src="/images1/logo.system-cam.png" class="header-image">
             <input type="checkbox" id="menu">
             <label for="menu">
                 <img src="/images/menu.png" class="menu-icono" alt="">
@@ -159,7 +159,7 @@
     </section>
     
     <div id="button-up">
-        <img src="images/flecha.png" width="50">
+        <img src="images1/flecha.png" width="50">
     </div>
    
     <footer class="footer">
