--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SYSTEM-CAM</title>
-    <link rel="icon" href="./images/logo.system-cam.png" type="image/png">
+    <link rel="icon" href="images/logo.system-cam.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
     
     <header class="header" id="header">
         <div class="menu container">
-            <img src="./images/logo.system-cam.png" class="header-image">
+            <img src="https://diegonami24.github.io/proyecto-daw/images/logo.system-cam.png" class="header-image">
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="./images/menu.png" class="menu-icono" alt="">
+                <img src="images/menu.png" class="menu-icono" alt="">
             </label>
             <nav class="navbar">
                 <ul>
@@ -56,7 +56,7 @@
                 </p>
             <div class="services-group">
                 <div class="services-1">
-                    <img src="./images/camaras1.servicios.png" alt="">
+                    <img src="/images/camaras1.servicios.png" alt="">
                     <h3>Camaras de Seguridad</h3>
                     <p>
                         Ofrecemos servicio integral en instalacion y mantenimiento de cámaras de seguridad en alta resolución, 
