--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="images/logo.system-cam.png" class="header-image">
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="images/menu.png" class="menu-icono" alt="">
+                <img src="/images/menu.png" class="menu-icono" alt="">
             </label>
             <nav class="navbar">
                 <ul>
@@ -130,15 +130,15 @@
                     <h3>Soporte Tecnico y Matenimiento</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="images/biometrico.galeria.png" alt="">
+                    <img src="/images/biometrico.galeria.png" alt="">
                     <h3>Controles biometricos</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="images/cableado.galeria.png" alt="">
+                    <img src="/images/cableado.galeria.png" alt="">
                     <h3>Cableado estructurado</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="images/videoportero.galeria.png" alt="">
+                    <img src="/images/videoportero.galeria.png" alt="">
                     <h3>Video Porteros</h3>
                 </div>
             </div>
@@ -159,7 +159,8 @@
     </section>
     
     <div id="button-up">
-        <img src="images/flecha.png" width="50">
+        <img src="
+        images/flecha.png" width="50">
     </div>
    
     <footer class="footer">
