--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
                     <h3>Soporte Tecnico y Matenimiento</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="/images/biometrico.galeria.png" alt="">
+                    <img src="images/biometrico.galeria.png" alt="">
                     <h3>Controles biometricos</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="/images/cableado.galeria.png" alt="">
+                    <img src="images/cableado.galeria.png" alt="">
                     <h3>Cableado estructurado</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="/images/videoportero.galeria.png" alt="">
+                    <img src="images/videoportero.galeria.png" alt="">
                     <h3>Video Porteros</h3>
                 </div>
             </div>
