--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <h3>Cableado estructurado</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="/images/videoportero.galeria.png" alt="">
+                    <img src="https://drive.google.com/file/d/1uyMvtYn7timtUK3vVSgjSGa6j1YuwOrq/view?usp=drive_link" alt="">
                     <h3>Video Porteros</h3>
                 </div>
             </div>
