--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <h3>Cableado estructurado</h3>
                 </div>
                 <div class="galeria-1">
-                    <img src="https://drive.google.com/file/d/1uyMvtYn7timtUK3vVSgjSGa6j1YuwOrq/view?usp=drive_link" alt="">
+                    <img src="https://drive.google.com/uc?export=dowload&id=1uyMvtYn7timtUK3vVSgjSGa6j1YuwOrq:" alt="">
                     <h3>Video Porteros</h3>
                 </div>
             </div>
@@ -148,7 +148,7 @@
 
     <section class="contact" id="contact">
         <div class="contact-content container">
-            <h2>Contactanos</h2>
+            <h2>Contáctanos</h2>
             <img src="/images/logo2.system-cam.png">
             <h3>Desarrollamos proyectos en todos los sectores tanto industrial como particular.</h3>
             <h3>Nuestro objetivo principal es velar y cuidar la seguridad empresarial y particular de nuestros clientes.</h3>
